
option java_outer_classname="DisposeCommandProtocol";
package Alachisoft.NCache.Common.Protobuf;
message DisposeCommand {
	optional int64 requestId = 1;
}